--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/bin/server.js",
-    "dev": "nodemon ./src/bin/server.js",
+    "start": "node ./dist/server.bundle",
+    "dev": "nodemon --exec npx babel-node ./src/bin/server",
+    "build": "webpack --mode production",
     "test": "jest --config=jest.config.json --detectOpenHandles --watchAll",
     "test-blog": "jest --config=jest.config.json --detectOpenHandles --watch src/test/blog.test.js"
   },
@@ -15,16 +16,29 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.1",
+    "graphql-tools": "^7.0.5",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.9",
+    "mongoose": "^5.13.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/runtime": "^7.14.6",
+    "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.6",
-    "supertest": "^6.1.3"
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.3",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
