--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "backend",
+  "name": "APIEditorial",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/server.bundle",
     "dev": "nodemon --exec npx babel-node ./src/bin/server",
+    "prebuild": "npm version patch",
     "build": "webpack --mode production",
+    "postbuild": "git add . && git commit -m 'Production' && git push -u origin master",
     "test": "jest --config=jest.config.json --detectOpenHandles --watchAll",
     "test-blog": "jest --config=jest.config.json --detectOpenHandles --watch src/test/blog.test.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Escribe como los Grandes",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
